# ic_akash

./: .editorconfig  .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json
akash/: example-sdl.yml
akash-client/: .gitignore  README.md  bun.lockb  index.ts  package.json
akash-client/src/: cert.ts
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: Tier.tsx  back-button.tsx  clipboard-copy-button.tsx  loading-button.tsx  new-deployment-form.tsx  spinner.tsx
frontend/contexts/: AuthContext.tsx  DeploymentContext.tsx  IcContext.tsx
frontend/declarations/: backend.did.d.ts  backend.did.js
frontend/fixtures/: deployment.ts
frontend/helpers/: deployment.ts  result.ts  timer.ts  ui.ts
frontend/lib/: certificate.ts  constants.ts
frontend/services/: backend.ts  deployment.ts  user.ts
frontend/types/: deployment.ts
scripts/: build-frontend.sh  build-webrtc-frontend.sh  create-akash-deployment.sh  deploy-local-backend-with-icp-ledger.sh  deploy-local-backend.sh  generate-backend-types.sh  pay-create-deployment.sh  run-tests.sh
src/backend/: Cargo.toml  backend.did  ledger_types.did  ws_types.did
src/backend/frontend/declarations/: backend.did.js
src/backend/src/: ecdsa.rs  lib.rs  utils.rs
src/backend/src/akash/: auth.rs  bank.rs  bids.rs  certificate.rs  deployment.rs  lease.rs  mod.rs  provider.rs  tx.rs
src/backend/src/akash/proto/: mod.rs
src/backend/src/akash/proto/base/: attribute.rs  cpu.rs  endpoint.rs  gpu.rs  memory.rs  mod.rs  resources.rs  resourcevalue.rs  storage.rs
src/backend/src/akash/proto/deployment/: deploymentmsg.rs  mod.rs
src/backend/src/akash/proto/escrow/: types.rs
src/backend/src/akash/proto/market/: bid.rs  mod.rs  query.rs
src/backend/src/akash/proto/provider/: mod.rs  provider.rs  query.rs
src/backend/src/akash/sdl/: mod.rs  sizes.rs
src/backend/src/api/: mod.rs
src/backend/src/api/endpoints/: akash.rs  deployment.rs  init.rs  ledger.rs  logs.rs  mod.rs  users.rs  websocket.rs
src/backend/src/api/mappings/: deployment.rs  log.rs  mod.rs
src/backend/src/api/memories/: config_memory.rs  config_state.rs  log_repository.rs  memory_manager.rs  mod.rs
src/backend/src/api/repositories/: log_repository.rs  mod.rs
src/backend/src/api/repositories/memories/: deployments_memory.rs  log_memory.rs  memory_manager.rs  mod.rs  users_memory.rs
src/backend/src/api/services/: access_control_service.rs  akash_service.rs  config_service.rs  deployments_service.rs  ledger_service.rs  log_service.rs  mod.rs  users_service.rs
src/backend/src/api/types/: config.rs  date_time.rs  deployments.rs  log.rs  mod.rs  result.rs  time.rs  users.rs  websocket.rs
src/backend/src/fixtures/: mod.rs  sdl.rs
src/backend/src/helpers/: akash.rs  ecdsa.rs  mod.rs  websocket.rs
src/backend/src/tests/: mod.rs
src/backend/src/tests/integration_tests/: mod.rs  setup.rs
src/backend/tests/integration_tests/: setup.rs
src/backend/tests/integration_tests/utils/: mod.rs  test_env.rs
src/ic_side_services_akash_backend/: Cargo.toml  ic_side_services_akash_backend.did
src/ic_side_services_akash_backend/src/: address.rs  auth.rs  bids.rs  config.rs  deployment.rs  ecdsa.rs  hash.rs  lease.rs  lib.rs  provider.rs  tx.rs  utils.rs
src/ic_side_services_akash_backend/src/akash/: auth.rs  bank.rs  bids.rs  certificate.rs  deployment.rs  lease.rs  mod.rs  provider.rs  tx.rs
src/ic_side_services_akash_backend/src/akash/proto/base/: gpu.rs  resources.rs
src/ic_side_services_akash_backend/src/akash/proto/deployment/: resourceunit.rs
src/ic_side_services_akash_backend/src/akash/proto/escrow/: types.rs
src/ic_side_services_akash_backend/src/akash/proto/market/: bid.rs  lease.rs
src/ic_side_services_akash_backend/src/akash/sdl/: mod.rs  sizes.rs
src/ic_side_services_akash_backend/src/proto/: mod.rs
src/ic_side_services_akash_backend/src/proto/base/: cpu.rs  memory.rs  storage.rs
src/ic_side_services_akash_backend/src/proto/cert/: cert.rs
src/ic_side_services_akash_backend/src/proto/deployment/: deployment.rs  deploymentmsg.rs  groupspec.rs  mod.rs
src/ic_side_services_akash_backend/src/proto/escrow/: types.rs
src/ic_side_services_akash_backend/src/proto/market/: bid.rs  mod.rs  query.rs
src/ic_side_services_akash_backend/src/sdl/: mod.rs
src/ic_tendermint_rpc/: Cargo.toml
src/ic_tendermint_rpc/proto/src/: serializers.rs
src/ic_tendermint_rpc/proto/src/serializers/: timestamp.rs
src/ic_tendermint_rpc/src/: id.rs  lib.rs  method.rs  request.rs  response.rs  response_error.rs  serializers.rs  uuid.rs  version.rs
src/ic_tendermint_rpc/src/endpoints/: block.rs  mod.rs  tx.rs
src/ic_tendermint_rpc/tendermint/src/: hash.rs  merkle.rs  private_key.rs  public_key.rs  timeout.rs
src/ic_tendermint_rpc/tendermint/src/block/: commit_sig.rs  header.rs
src/ic_tendermint_rpc/tendermint/src/chain/: id.rs
src/ic_tendermint_rpc/tendermint/src/crypto/default/: signature.rs
src/icp_ledger/: icp_ledger.did
src/tendermint_rpc_canister/: Cargo.toml
src/tendermint_rpc_canister/proto/: Cargo.toml
src/tendermint_rpc_canister/proto/src/serializers/: timestamp.rs
src/tendermint_rpc_canister/src/: base64string.rs  id.rs  lib.rs  proto.rs  rand.rs  request.rs  response.rs  serializers.rs  tendermint_rpc_canister.did  uuid.rs
src/tendermint_rpc_canister/src/endpoints/: abci_info.rs  abci_query.rs  block.rs  mod.rs  tx_sync.rs
src/tendermint_rpc_canister/tendermint/: Cargo.toml
src/tendermint_rpc_canister/tendermint/src/: time.rs  trust_threshold.rs
src/tendermint_rpc_canister/tendermint/src/block/: height.rs
src/utils/: Cargo.toml
src/utils/src/: encodings.rs  lib.rs  outcall.rs  rand.rs  time.rs  uuid.rs
src/webrtc_test/: index.html  package.json  pnpm-lock.yaml
src/xrc/: xrc.did
tendermint_client/: Cargo.toml
tendermint_client/src/: main.rs
tendermint_rpc_canister/: Cargo.toml  README.md  dfx.json
tendermint_rpc_canister/src/: lib.rs  (+1 more)
(+5 files in other folders)
