[package]
name = "tendermint_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
bytes = "1.5.0"
chrono = "0.4.31"
cosmrs = "0.15.0"
hex = "0.4.3"
openssl = "0.10.62"
pem = "3.0.3"
tendermint = "0.34.0"
tendermint-rpc = { version = "0.34.0", features = ["http-client"] }
tokio = "1.35.1"
x509-cert = "0.2.5"
