[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-stable-structures.workspace = true
ic-websocket-cdk = "0.3"
ic-cdk-timers = "0.6"
ic-ledger-types = "0.10"
ic-xrc-types = "1.2"

serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.30"
serde_repr = "0.1.18"

bech32 = "0.9.1"
cosmrs = "0.15.0"
getrandom = { version = "0.2", features = ["custom"] }
prost = "0.12.3"
prost-types = "0.12.3"
regex = "1.10.3"
hex.workspace = true
chrono = { version = "0.4", default-features = false, features = ["std"] }

ic_tendermint_rpc = { path = "../ic_tendermint_rpc" }
utils.workspace = true
