[package]
name = "ic_side_services_akash_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bech32 = "0.9.1"
candid = "0.9.3"
cosmrs = "0.15.0"
hex = "0.4.3"
ic-cdk = "0.10.0"
ripemd = "0.1.3"
serde = "1.0.195"
sha2 = "0.10.8"

# Enable `custom` feature of k256's getrandom dependency. See lib.rs for more details.
getrandom = { version = "0.2", features = ["custom"] }
prost = "0.12.3"
prost-types = "0.12.3"
base64 = "0.21.7"
serde_yaml = "0.9.30"
serde_json = "1.0.111"
regex = "1.10.3"
