[package]
name = "ic_side_services_akash_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bech32 = "0.9.1"
candid.workspace = true
cosmrs = "0.15.0"
hex.workspace = true
ic-cdk.workspace = true
ripemd = "0.1.3"
serde.workspace = true
sha2 = "0.10.8"

getrandom = { version = "0.2", features = ["custom"] }
prost = "0.12.3"
prost-types = "0.12.3"
base64 = "0.21.7"
serde_yaml = "0.9.30"
serde_json.workspace = true
regex = "1.10.3"
serde_repr = "0.1.18"

ic_tendermint_rpc = { path = "../ic_tendermint_rpc" }
