[package]
name = "ic_tendermint_rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
subtle-encoding = "0.5.1"
thiserror = "1.0.56"
bytes = "1.5.0"
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
uuid = { version = "1.6", features = ["serde"] }
tendermint-proto = { version = "0.34.0", path = "./proto" }
tendermint = { version = "0.34.0", path = "./tendermint" }
