[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-stable-structures.workspace = true

serde.workspace = true
hex.workspace = true

sha2 = "0.10.8"
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
uuid = { version = "1.6", features = ["serde"] }
base64 = "0.21.7"
