[package]
name = "tendermint-proto"
version = "0.34.0"
authors = ["Informal Systems <hello@informal.systems>"]
edition = "2021"
repository = "https://github.com/informalsystems/tendermint-rs/tree/main/proto"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords = ["blockchain", "tendermint", "proto"]

description = """
    tendermint-proto is a the Rust implementation of the Tendermint proto structs.
    """

[features]
default = []

[package.metadata.docs.rs]
all-features = true

[dependencies]
prost = { version = "0.12", default-features = false }
prost-types = { version = "0.12", default-features = false }
bytes = { version = "1.0", default-features = false, features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_bytes = { version = "0.11", default-features = false, features = [
    "alloc",
] }
subtle-encoding = { version = "0.5", default-features = false, features = [
    "hex",
    "base64",
    "alloc",
] }
num-traits = { version = "0.2", default-features = false }
num-derive = { version = "0.3", default-features = false }
flex-error = { version = "0.4.4", default-features = false }

[dev-dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
